# glyphtool

./: .gitignore  Cargo.toml  espeak-ng.lib  high_etrois_language_docs.md  model.mpk  speak.lib
autophononimbus/: __main__.py  database.py  lstm.py  model.pth
cli/: Cargo.toml
cli/src/: commands.rs  dictionary  dictionary.rs  main.rs
core/: Cargo.toml
core/src/: database.rs  error.rs  glyphs.rs  lexer.rs  lib.rs  postprocessor.rs  renderer.rs
core/src/glyphs/: ascii.rs  consonants.rs  encoder.rs  ipa.rs  numeric.rs  special.rs  vowels.rs
core/src/lexer/: collections.rs  phonambulator.rs  preprocessor.rs  token.rs  tokens_ext.rs
core/src/lexer/phonambulator/: ipa.rs  syllabic_model.rs
core/src/lexer/phonambulator/syllabic_model/: batch.rs  data.rs  inner.rs  training.rs
core/src/postprocessor/: filters.rs  utilities.rs
core/src/renderer/: bitmap.rs  block.rs  glyphs.rs  render_trait.rs  row.rs  shrtstop.rs  stack.rs  utilities.rs
core/src/renderer/glyphs/: consonants.rs  numbers.rs  special.rs  vowels.rs
espeak/: Cargo.toml  build.rs
espeak/c_src/: .gitignore  Makefile  readme.md
examples/: creation_myth.ipa  creation_myth.txt  epitaph_of_nadi.yml  fall_of_nadi.ruh  fall_of_nadi.txt  myth2.txt  udecl_human_rights.txt  udecl_human_rights.yaml
manager/: Cargo.toml  jobs.schema.json
ruh_lang_def/: etrois.tmLanguage.json  language-configuration.json  package.json
src/: autophononimbus.rs  commands.rs  commands_old.rs  database.rs  error.rs  lexer.rs  main.rs  postprocessor.rs  renderer.rs
web/: Cargo.toml  index.html
web/src/: main.rs
(+97 files in other folders)
