[package]
name = "high_etrois"
version = "0.1.0"
edition = "2021"

[dependencies]
logos = "0.15.0"
rusqlite = {version = "0.33.0", features = ["bundled", "blob"]}
thiserror = "2.0.11"
image = "0.25.5"
rand = "0.9.0"
noise = "0.9.0"
espeakng-sys = "0.2.0"
clap = { version = "4.5.30", features = ["derive"] }
open = "5.3.0"
rayon = "1.10.0"