[package]
name = "glyphtool_api"
version = "0.1.0"
edition = "2021"

[dependencies]
libglyphtool = { path = "../core" }
axum = "0.8.1"
tokio = { version = "1.43.0", features = ["macros", "rt-multi-thread"] }
serde = "1.0.218"
serde_json = "1.0.139"
base64 = "0.22.1"
tower-http = { version = "0.6.2", features = ["cors", "trace"] }